testsuite/tests/backtrace/pr6920_why_swallow.reference
Fatal error: exception Stdlib.Exit
Raised at Pr6920_why_swallow.why in file "pr6920_why_swallow.ml", line 9, characters 35-45
Called from Pr6920_why_swallow.f in file "pr6920_why_swallow.ml", line 12, characters 4-13
Called from Pr6920_why_swallow in file "pr6920_why_swallow.ml", line 19, characters 2-6
